# iplayer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: library.rs  lyrics.rs  metadata.rs  mod.rs  playback.rs  playlist.rs  plugin.rs
src-tauri/src/db/: migrations.rs  mod.rs  plugin_repo.rs  repository.rs  seed.rs
src-tauri/src/db/repository/: albums.rs  folders.rs  import.rs  liked.rs  mod.rs  playlists.rs  songs.rs  tests.rs
src-tauri/src/lyrics/: lrc.rs  mod.rs
src-tauri/src/model/: library.rs  mod.rs  playback.rs  plugin.rs
src-tauri/src/playback/: engine.rs  mod.rs  source.rs
src-tauri/src/plugin/: hooks.rs  mod.rs  registry.rs
src-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.js
src-ui/src/: app-shell.js  bootstrap.js  global-events.js  ipc.js  main.js  mock-data.js  playback-events.js  player-actions.js  state.js  styles.css  window-mode.js
src-ui/src/components/: content.js  context-menu.js  lyrics.js  metadata-panel.js  mini-mode.js  now-playing.js  player-bar.js  plugin-panel.js  settings.js  sidebar.js  slider.js  titlebar.js  toast.js
src-ui/src/styles/: app-shell.css  content.css  context-menu.css  index.css  library.css  lyrics.css  metadata-panel.css  mini-window.css  now-playing.css  overlay.css  player-bar.css  plugin-panel.css  reset.css  settings.css  sidebar.css  titlebar.css  toast.css  tokens.css
